WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
9279
Quirksmode: Hover with adjacent selector doesn't work
https://bugs.webkit.org/show_bug.cgi?id=9279
Summary
Quirksmode: Hover with adjacent selector doesn't work
Adele Peterson
Reported
2006-06-02 15:09:22 PDT
http://www.quirksmode.org/bugreports/archives/safari/index.html
"The hover selector combined with an adjacent selector (dt:hover + dd { color : red; }) works buggily (Safari) or not at all (Opera), while these browsers support the two of them separately. Test page
http://sonofhans.net/css/snippets/adjacent_siblings_safari.html
Workaround is not included Reported by: Randall Hansen."
Attachments
Test case (:hover + :focus)
(520 bytes, text/html)
2008-01-30 04:56 PST
,
Sjoerd Tieleman (tieleman)
no flags
Details
Fixes the problem
(1.56 KB, patch)
2008-03-19 11:46 PDT
,
Dave Hyatt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joost de Valk (AlthA)
Comment 1
2006-06-24 14:15:51 PDT
Good testcase, bug in component CSS.
Mark Rowe (bdash)
Comment 2
2006-10-30 04:30:00 PST
***
Bug 11006
has been marked as a duplicate of this bug. ***
Sjoerd Tieleman (tieleman)
Comment 3
2008-01-30 04:56:13 PST
Created
attachment 18791
[details]
Test case (:hover + :focus) Verified that this is still an issue in the nightly builds and not only occurs when using the :hover pseudoclass, but also when using :focus. Camino renders this correctly.
Robert Blaut
Comment 4
2008-02-11 11:44:20 PST
Similar
bug 12998
Robert Blaut
Comment 5
2008-02-21 11:59:15 PST
***
Bug 17477
has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 6
2008-03-19 11:46:35 PDT
Created
attachment 19886
[details]
Fixes the problem I'll make a test case using class manipulation.
Sam Weinig
Comment 7
2008-03-19 11:59:47 PDT
Comment on
attachment 19886
[details]
Fixes the problem r=me. (pending changelog and test)
Dave Hyatt
Comment 8
2008-03-20 11:11:59 PDT
Fixed.
Dave Hyatt
Comment 9
2008-03-20 20:42:58 PDT
***
Bug 17976
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug